--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>国旗あてクイズ</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>国旗クイズ</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>国旗あてクイズへようこそ！</h1>
-  <p>このサイトでは、世界の国旗を見て国名を当てるクイズに挑戦できます。</p>
+  <h1>国旗クイズ</h1>
+  <div id="quiz">
+    <img id="flag" src="" alt="国旗" />
+    <div id="options"></div>
+    <p id="result"></p>
+    <button id="next">次の問題</button>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
