--- a/nationalflagquiz/index.html
+++ b/nationalflagquiz/index.html
@@ -3,13 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>クイズポータル</title>
+  <title>国旗クイズ</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>クイズサイトへようこそ！</h1>
-  <div class="quiz-container" id="quiz-list">
-    <!-- JavaScriptでリンクを挿入 -->
+  <h1>国旗クイズ</h1>
+  <div id="quiz">
+    <img id="flag" src="" alt="国旗" />
+    <div id="options"></div>
+    <p id="result"></p>
+    <button id="next">次の問題</button>
   </div>
   <script src="script.js"></script>
 </body>
