--- a/nationalflagquiz/index.html
+++ b/nationalflagquiz/index.html
@@ -8,12 +8,38 @@
 </head>
 <body>
   <h1>国旗クイズ</h1>
-  <div id="quiz">
-    <img id="flag" src="" alt="国旗" />
-    <div id="options"></div>
-    <p id="result"></p>
-    <button id="next">次の問題</button>
+
+  <div id="start-screen">
+    <h2>モード選択</h2>
+
+    <label>出題モード：</label><br>
+    <select id="mode-select">
+      <option value="flag-to-name">国旗 → 国名</option>
+      <option value="name-to-flag">国名 → 国旗</option>
+    </select><br><br>
+
+    <label>制限時間：</label><br>
+    <select id="time-select">
+      <option value="30">30秒</option>
+      <option value="60">60秒</option>
+    </select><br><br>
+
+    <label>選択肢の数：</label><br>
+    <input type="number" id="choice-count" min="5" max="8" value="4"><br><br>
+
+    <button id="start-btn">クイズを始める</button>
   </div>
+
+  <div id="quiz-screen" style="display: none;">
+    <div id="timer"></div>
+    <div id="quiz">
+      <div id="question-container"></div>
+      <div id="options"></div>
+      <p id="result"></p>
+      <button id="next" style="display: none;">次の問題</button>
+    </div>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
