--- a/nationalflagquiz/index.html
+++ b/nationalflagquiz/index.html
@@ -11,7 +11,6 @@
 
   <div id="start-screen">
     <h2>モード選択</h2>
-
     <label>出題モード：</label><br>
     <select id="mode-select">
       <option value="flag-to-name">国旗 → 国名</option>
@@ -25,7 +24,7 @@
     </select><br><br>
 
     <label>選択肢の数：</label><br>
-    <input type="number" id="choice-count" min="5" max="8" value="4"><br><br>
+    <input type="number" id="choice-count" min="5" max="8" value="5"><br><br>
 
     <button id="start-btn">クイズを始める</button>
   </div>
@@ -37,6 +36,14 @@
       <div id="options"></div>
       <p id="result"></p>
       <button id="next" style="display: none;">次の問題</button>
+    </div>
+  </div>
+
+  <div id="score-modal" class="modal">
+    <div class="modal-content">
+      <h2>スコア発表！</h2>
+      <p id="final-score"></p>
+      <button id="close-modal">閉じる</button>
     </div>
   </div>
 
