--- a/nationalflagquiz/index.html
+++ b/nationalflagquiz/index.html
@@ -24,6 +24,15 @@
       <option value="jp-common">日本語（慣用名）</option>
       <option value="jp-official">日本語（正式名）</option>
     </select><br><br>
+    
+    <label>出題地域：</label><br>
+    <div id="region-filters" class="checkbox-group">
+      <label><input type="checkbox" value="Asia" checked> アジア</label>
+      <label><input type="checkbox" value="Europe" checked> ヨーロッパ</label>
+      <label><input type="checkbox" value="Africa" checked> アフリカ</label>
+      <label><input type="checkbox" value="Americas" checked> アメリカ大陸</label>
+      <label><input type="checkbox" value="Oceania" checked> オセアニア</label>
+    </div><br>
 
     <label>制限時間：</label><br>
     <div id="time-buttons" class="button-group">
