--- a/nationalflagquiz/index.html
+++ b/nationalflagquiz/index.html
@@ -27,6 +27,7 @@
     
     <label>出題地域：</label><br>
     <div id="region-filters" class="checkbox-group">
+      <label><input type="checkbox" id="select-all-regions" checked> すべて選択</label><br>
       <label><input type="checkbox" value="Asia" checked> アジア</label>
       <label><input type="checkbox" value="Europe" checked> ヨーロッパ</label>
       <label><input type="checkbox" value="Africa" checked> アフリカ</label>
