--- a/flashflag/index.html
+++ b/flashflag/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <h1>フラッシュフラッグ</h1>
+
   <div id="mode-select">
     <h2>フラッシュ回数を選んでください</h2>
     <div id="mode-buttons">
@@ -14,20 +16,18 @@
       <button class="mode-button" data-count="10">10回</button>
       <button class="mode-button" data-count="15">15回</button>
     </div>
-    <button id="start-button" style="display: none;">スタート</button>
+    <button id="start-button">スタート</button>
   </div>
 
   <div id="game" style="display: none;">
-    <h1>フラッシュフラッグ</h1>
     <div id="flash-container"></div>
-
     <div id="question-area" style="display: none;">
-      <p id="question-text">この国旗はあったでしょうか？</p>
+      <h2>この国旗はあったでしょうか？</h2>
       <div id="final-flag"></div>
       <div id="country-name"></div>
       <div id="answer-buttons">
-        <button id="yes-button" class="answer-button maru">○</button>
-        <button id="no-button" class="answer-button batsu">×</button>
+        <button class="answer-button maru" id="yes-button">○</button>
+        <button class="answer-button batsu" id="no-button">×</button>
       </div>
     </div>
   </div>
