--- a/flashflag/index.html
+++ b/flashflag/index.html
@@ -17,6 +17,9 @@
       <button class="mode-button" data-count="15">15回</button>
     </div>
     <button id="start-button">スタート</button>
+    <div style="margin-top: 10px;">
+      <a href="home.html" id="home-link">地理クイズホームに戻る</a>
+    </div>
   </div>
 
   <div id="game" style="display: none;">
@@ -29,6 +32,9 @@
         <button class="answer-button maru" id="yes-button">○</button>
         <button class="answer-button batsu" id="no-button">×</button>
       </div>
+      <div id="score-display">正解: 0｜不正解: 0</div>
+      <button id="next-button" style="display: none;">次の問題へ</button>
+      <button id="back-to-mode">モード選択画面に戻る</button>
     </div>
   </div>
 
