--- a/concentration/index.html
+++ b/concentration/index.html
@@ -17,6 +17,9 @@
       <button class="difficulty" data-level="hard">上級</button>
     </div>
     <button id="start-button">スタート</button>
+    <div style="margin-top: 10px;">
+      <a href="home.html" id="home-link">地理クイズホームに戻る</a>
+    </div>
   </div>
 
   <div id="turn-counter">ターン数: 0</div>
