--- a/bounce/index.html
+++ b/bounce/index.html
@@ -12,12 +12,14 @@
     <p class="subtitle">疲れて凝った目を運動させる</p>
 
     <div class="mode-selection">
-      <div class="section">
-        <p>難易度：</p>
-        <button class="level-button selected" data-level="easy">初級</button>
-        <button class="level-button" data-level="medium">中級</button>
-        <button class="level-button" data-level="hard">上級</button>
-      </div>
+        <div class="section">
+          <p>難易度：</p>
+          <button class="level-button selected" data-level="easy">初級</button>
+          <button class="level-button" data-level="medium">中級</button>
+          <button class="level-button" data-level="hard">上級</button>
+          <button class="level-button" data-level="infinite">無限</button> <!-- ✅ 追加 -->
+        </div>
+      
     </div>
 
     <button id="start-button">スタート</button>
